syntax = "proto3";
package b9lab.checkers.checkers;

option go_package = "github.com/b9lab/checkers/x/checkers/types";

message StoredGame {
  string creator = 1;
  string index = 2;
  string game = 3; 
  string turn = 4;
  string red = 5; 
  string black = 6; 
  uint64 moveCount = 7;
  string beforeId = 8; // Pertains to the FIFO. Towards head.
  string afterId = 9; // Pertains to the FIFO. Towards tail.
  string deadline = 10;
  string winner = 11;
  uint64 wager = 12;
  string token = 13; // Denomination of the wager.
}
